--- a/card1.html
+++ b/card1.html
@@ -21,12 +21,12 @@
     <header class="sticky-top">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container">
-                <a href="./0520.html" class="navbar-brand moo-lah-lah-regular">Kim Min Hyun</a>
+                <a href="./index.html" class="navbar-brand moo-lah-lah-regular">Kim Min Hyun</a>
                 <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"><span class="navbar-toggler-icon"></span></button>
 
                 <div id="navbarNav" class="collapse navbar-collapse">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item"><a href="./0520.html" class="nav-link">Home</a></li>
+                        <li class="nav-item"><a href="./index.html" class="nav-link">Home</a></li>
                         <li class="nav-item"><a href="" class="nav-link">About</a></li>
                         <li class="nav-item"><a href="" class="nav-link">Resum</a></li>
                         <li class="nav-item dropdown">
