--- a/index.html
+++ b/index.html
@@ -77,6 +77,9 @@
                 </div>
             </div>
         </section>
+
+
+
         <section id="career">
             <div class="container">
                 <h2 class="text-center my-5">My Career Timeline</h2>
@@ -457,6 +460,7 @@
 
         </section>
 
+
         <section id="tabs" class="tabs section my-5">
             <div class="container section-title" data-aos="fade-up">
                 <h2 class="text-center">Departments</h2>
@@ -699,7 +703,7 @@
                 <div class="row gy-4">
                     <div class="col-lg-6 position-relative align-self-start" data-aos="fade-up" data-aos-delay="100">
                         <img src="./images/1.jpg" class="img-fluid" alt="">
-                        <a href="https://www.youtube.com/watch?v=BjmyeL5PrS4" class="glightbox video-play-btn">영상</a>
+                        <a href="https://www.youtube.com/watch?v=BjmyeL5PrS4" class="glightbox video-play-btn"></a>
                     </div>
                     <div class="col-lg-6 content" data-aos="fade-up" data-aos-delay="200">
                         <h3>Hello Centum</h3>
@@ -714,6 +718,46 @@
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quidem recusandae
                             reiciendis placeat laborum ipsum delectus esse, perferendis pariatur 
                             sed veritatis. Saepe, omnis provident. Cupiditate, dolor officia? Accusantium doloribus mollitia vero!</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
+        <section id="contact">
+            <div class="container mt-5">
+                <div class="text-center">
+                    <h2>Get in touch</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                </div>
+
+                <div class="row justify-content-center my-5">
+                    <div class="col-6">
+                        <form action="">
+                            <label for="email" class="form-label">Email :</label>
+                            <input type="email" class="form-control" id="email" placeholder="Your@email.com">
+                            <div class="my-5">
+                                <label for="name" class="form-label">Name : </label>
+                                <input type="text" id="name" class="form-control" placeholder="e.g. 김민현">
+                            </div>
+                            <label for="subject" class="form-label">Subject</label>
+                            <select name="subject" id="subject" class="form-select">
+                                <option value="pricing">Pricing</option>
+                                <option value="technical">Technical</option>
+                                <option value="other">Other</option>
+                            </select>
+                            <div class="mt-5">
+                                <label for="query">Write a message</label>
+                                <textarea name="query" id="query" style="height: 150px;"
+                                class="form-control" placeholder="write a message">
+
+                                </textarea>
+                            </div>
+                            <div class="mt-5">
+                                <button type="submit" class="btn btn-success">전 송 !</button>
+                                <button type="reset" class="btn btn-danger">취 소 !</button>
+                            </div>
+                        </form>
                     </div>
                 </div>
             </div>
